--- a/XGBM&LGBM (2).ipynb
+++ b/XGBM&LGBM (2).ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(r\"C:\\Users\\kavya\\Downloads\\XGBM & LGBM\\XGBM & LGBM\\Titanic_train.csv\")\n",
-    "test_df = pd.read_csv(r\"C:\\Users\\kavya\\Downloads\\XGBM & LGBM\\XGBM & LGBM\\Titanic_test.csv\")"
+    "train_df = pd.read_csv(\"Titanic_train.csv\")\n",
+    "test_df = pd.read_csv(\"CTitanic_test.csv\")"
    ]
   },
   {
