--- a/XGBM&LGBM (2).ipynb
+++ b/XGBM&LGBM (2).ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "train_df = pd.read_csv(\"Titanic_train.csv\")\n",
-    "test_df = pd.read_csv(\"CTitanic_test.csv\")"
+    "test_df = pd.read_csv(\"Titanic_test.csv\")"
    ]
   },
   {
